Update app to remember settings and look for jwtservice implementation